# dantalink

./: .env.example  .gitignore  CLAUDE.md  README.md  events_demo.json  events_rss.json  index.html  matches.json  matches_demo.json  matches_live.json  pyproject.toml
dantalink/: __init__.py  cli.py  pipeline.py
dantalink/classifier/: __init__.py
dantalink/collectors/: __init__.py  base.py  dart.py  gdelt.py  krx.py  rss.py  telegram.py
dantalink/matchers/: __init__.py  base.py  korean_stocks.py  models.py  phonological.py  semantic.py
dantalink/models/: __init__.py
data/: krx_sectors.json  krx_stocks.csv  krx_stocks.json
docs/: DantaLink_데이터수집기_문서.md  DantaLink_방법론.md  data_collector_gui.html  matcher_engine.js  methodology_viz.html  stock_match_gui.html
docs/reports/: 20260520_124844_DantaLink_검토보고서_및_플랜.md  20260520_124844_Phase_A_파일정리.md  20260520_125116_QC_01_파일시스템.md  20260520_125652_Phase_B_HighPriority수정.md  20260520_125900_QC_02_pytest.md  20260520_130215_H3_RSS_healthcheck.md  20260520_130931_Phase_C_라이브수집검증.md  20260520_132758_Phase_D_E_Stage02_종목추출.md  20260520_133008_QC_최종_Stage02통과.md  20260520_133106_사용자_테스트_요청.md  20260520_133534_시행착오_노하우_정리.md  20260520_134506_다음분기_우선작업_외국인명패턴.md  20260520_143150_GitHub_Pages_배포_시행착오.md  20260520_145528_콘솔연계_클라이언트매칭_시행착오.md  20260520_150102_회고_콘솔연계결정_워크플로우위반.md  20260520_150258_QC_03_콘솔연계_보강검증.md  20260520_150751_결정_연결방향_GUI인사이트.md  20260520_151636_QC_04_Phase_A_카드인사이트.md  20260520_151700_시행착오_Phase_A_인사이트.md  20260520_162250_시행착오_분석패널.md  (+13 more)
examples/: basic_scan.py
tests/: test_classifier.py  test_models.py
