[project]
name = "dantalink"
version = "0.1.0"
description = "Behavioral finance based Korean market opportunity discovery"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name = "진영", email = "" },
]
license = { text = "Proprietary" }
dependencies = [
    "httpx>=0.27.0",
    "feedparser>=6.0.0",
]

[project.optional-dependencies]
telegram = ["telethon>=1.34.0"]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "ruff>=0.4",
]

[project.scripts]
dantalink = "dantalink.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["dantalink"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
ignore = []

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
